<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0b1931"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/game_instruction"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:text="@string/game_instruction"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/game_txtGuess"
        android:layout_width="311dp"
        android:layout_height="53dp"
        android:layout_below="@id/game_instruction"
        android:layout_marginTop="16dp"
        android:hint="@string/game_txtGuess"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_instruction" />

    <Button
        android:id="@+id/game_btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_txtGuess"
        android:backgroundTint="#EFA621"
        android:text="@string/game_btnSubmit"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/game_btnHint"
        android:layout_width="205dp"
        android:layout_height="49dp"
        android:layout_below="@id/game_btnSubmit"
        android:layout_marginTop="16dp"
        android:backgroundTint="#EFA621"
        android:text="@string/game_btnHint"
        android:textColor="#FFFFFF"
        app:cornerRadius="15px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_feedback" />

    <TextView
        android:id="@+id/game_feedback"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/game_btnHint"
        android:layout_marginTop="20dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_txtGuess" />

    <TextView
        android:id="@+id/game_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_btnHint"
        android:layout_marginTop="4dp"
        android:text="@string/game_attempts"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="62dp"
        android:layout_height="30dp"
        android:text="@string/btnBack"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>